backend/src/main/java/com/example/sap_shop/error/SaleNotFoundException.java
package com.example.sap_shop.error;

public class SaleNotFoundException extends Exception{
    public SaleNotFoundException(String message) {
        super(message);
    }
}
